src/global.less
html,
body,
#root {
  height: 100%;
  margin: 0;
  padding: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,
    'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
    'Noto Color Emoji';
}

.colorWeak {
  filter: invert(80%);
}

.app {
  height: calc(100vh - 58px);;
  display: flex;
  flex-direction: column;
}

.top {
  flex: 0;
  border-bottom: solid 1px var(--adm-color-border);
}

.body {
  flex: 1;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow-y: hidden;
  overflow-x: hidden;
}

.bottom {
  flex: 0;
  border-top: solid 0.5px var(--adm-color-text-secondary);
}

.ant-layout {
  min-height: 100vh;
}

.ant-pro-global-header-header-actions-avatar {
  padding-inline-start: 0px;
  padding-inline-end: 0px;
}

.ant-pro-page-container-children-container{
  @media (max-width: 768px) {
    padding-inline: 8px !important;
  }
}

.no-padding .ant-pro-page-container-children-container{
  @media (max-width: 768px) {
    padding-inline: 0px !important;
  }
}


.ant-pro-page-container .ant-pro-page-container-warp-page-header{
  @media (max-width: 768px) {
    padding-inline-start: 8px;
    padding-inline-end: 8px;
  }

}

.ant-menu-item-group-title {
  color: rgba(255, 255, 255, 0.75) !important;
}

.ant-pro-form-login-page-container {
  width: 100vw !important;
 
  @media (min-width: 768px) {
    height: calc(100% - 152px);
  }
}
canvas {
  margin: 0px;
  padding: 0px;
}
.ant-pro-sider.ant-layout-sider.ant-pro-sider-fixed {
  left: unset;
}

.ant-pro-form-login-page-notice {
  @media (max-width: 768px) {
    background: #141414;
  }

  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}
 

.ant-pro-form-login-page {
  @media (max-width: 768px) {
    background: #141414;
  }
}

canvas {
  display: block;
}
body {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

ul,
ol {
  list-style: none;
}

@media (max-width: 768px) {
  .ant-table {
    width: 100%;
    overflow-x: auto;
    &-thead > tr,
    &-tbody > tr {
      > th,
      > td {
        white-space: pre;
        > span {
          display: block;
        }
      }
    }
  }
}

.ant-pro-table-list-toolbar-title {
  font-weight: bold;
}

.ant-form-item-label > label {
  height: 100% !important;
}

:root:root {
  --adm-color-primary: #00b96b;
}

.ant-skeleton.ant-skeleton-element {
  width: 100% !important;
}

.ant-skeleton-input {
  width: 100% !important;
}

.ant-skeleton-button {
  width: 100% !important;
}


.ant-badge-status-processing {
  color: #1677ff !important;
  background: #1677ff !important;
}

// This line is just to hide year on holiday tabs
@media (max-width: 991px) {
  #edit-farm-holiday-tab {
    .ant-picker-calendar-mode-switch {
      display: none;
    }
  }
}

#transparent-list-scrollbar {
  &::-webkit-scrollbar {
    width: 12px;
  }

  &::-webkit-scrollbar-track {
    background: transparent;
  }

  &::-webkit-scrollbar-thumb {
    background: transparent;
  }

  &::-webkit-scrollbar-thumb:hover {
    background: transparent;
  }

  &:hover {
    scrollbar-color: transparent transparent;
  }
}

.ant-pro-table-list-toolbar .ant-pro-table-list-toolbar-container{
  flex-wrap: nowrap;
  flex-direction: row;
}

.ant-pro-table-list-toolbar .ant-pro-table-list-toolbar-left{
  margin-block-end: 0px;
}

// Adapt modal behavior on mobile to full screen
@media (max-width: 768px) {
  .ant-modal {
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    margin: 0!important;
  }
  .ant-modal-content {
    border-radius: 0!important;
    height: 100vh;
    width: 100vw;
    margin: 0;
    top: 0;
  }
  .ant-modal-body {
    height: calc(100vh - 110px);
  }
}

